Minor Font change

--- a/guepage.html
+++ b/guepage.html
@@ -53,7 +53,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Alexander Arian</div>
-                <div class="mentor-desc">2+ Environmental Engineering</div>
+                <div class="mentor-prog">2+ Environmental Engineering</div>
                 <div class="mentor-desc">I can teach you 50-100 different kinds of
                     board games!</div>
             </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Andrew Shieh</div>
-                <div class="mentor-desc">3+ Computer Engineering</div>
+                <div class="mentor-prog">3+ Computer Engineering</div>
                 <div class="mentor-desc">I like video games!</div>
             </div>
         </div>
@@ -76,7 +76,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Belinda Suhardy</div>
-                <div class="mentor-desc">2+ Commerce</div>
+                <div class="mentor-prog">2+ Commerce</div>
                 <div class="mentor-desc">Finishes a tub of ice cream at 1 go!</div>
             </div>
         </div>
@@ -87,7 +87,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Brandon Sumarno</div>
-                <div class="mentor-desc">3+ Civil Engineering</div>
+                <div class="mentor-prog">3+ Civil Engineering</div>
                 <div class="mentor-desc">I like basketball!</div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Celine Nugraha</div>
-                <div class="mentor-desc">3+ Food Science</div>
+                <div class="mentor-prog">3+ Food Science</div>
                 <div class="mentor-desc">I love eating pickles: acar, takuan,
                     sauerkraut, kimchi, dill - u name it!</div>
             </div>
@@ -110,7 +110,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Charlotte Lin</div>
-                <div class="mentor-desc">3+ Food & Nutritional</div>
+                <div class="mentor-prog">3+ Food & Nutritional</div>
                 <div class="mentor-desc">I can recite the abc backwards!</div>
             </div>
         </div>
@@ -121,7 +121,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Christopher Mulya</div>
-                <div class="mentor-desc">3+ Food Science</div>
+                <div class="mentor-prog">3+ Food Science</div>
                 <div class="mentor-desc">I don't drink coffee!</div>
             </div>
         </div>
@@ -132,7 +132,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Deandra Taufik</div>
-                <div class="mentor-desc">3+ Food Science, Psychology (minor)</div>
+                <div class="mentor-prog">3+ Food Science, Psychology (minor)</div>
                 <div class="mentor-desc">I am a skincare junkie! I love
                     collecting products, especially facial
                     serums by The Ordinary!</div>
@@ -145,7 +145,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Henry Japardi</div>
-                <div class="mentor-desc">4+ Commerce</div>
+                <div class="mentor-prog">4+ Commerce</div>
                 <div class="mentor-desc">I've been gaming my entire life!</div>
             </div>
         </div>
@@ -156,7 +156,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Justin Rahardjo</div>
-                <div class="mentor-desc">2+ Computer Science</div>
+                <div class="mentor-prog">2+ Computer Science</div>
                 <div class="mentor-desc">I’ve lost my student card 2x
                     less than a month!</div>
             </div>
@@ -168,7 +168,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Kelly Widjaja</div>
-                <div class="mentor-desc">2+ Food Science</div>
+                <div class="mentor-prog">2+ Food Science</div>
                 <div class="mentor-desc">I skydived!</div>
             </div>
         </div>
@@ -179,7 +179,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Levina Ira</div>
-                <div class="mentor-desc">3+ Food and Nutritional Sciences</div>
+                <div class="mentor-prog">3+ Food and Nutritional Sciences</div>
                 <div class="mentor-desc">I can finish an entire jar of pb by myself in 2 weeks!</div>
             </div>
 
@@ -191,7 +191,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Maydeline Yang</div>
-                <div class="mentor-desc">2+ Commerce</div>
+                <div class="mentor-prog">2+ Commerce</div>
                 <div class="mentor-desc">I dislocated my shoulder 4x playing sports!</div>
             </div>
         </div>
@@ -202,7 +202,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Michael Lukito</div>
-                <div class="mentor-desc">3+ Economics & MM</div>
+                <div class="mentor-prog">3+ Economics & MM</div>
                 <div class="mentor-desc">I have been rejected by 70 employers!</div>
             </div>
         </div>
@@ -213,7 +213,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Michael Santoso</div>
-                <div class="mentor-desc">3+ Mechanical Engineering</div>
+                <div class="mentor-prog">3+ Mechanical Engineering</div>
                 <div class="mentor-desc">There's a woman who sells Chinese food at UBC
                     but she can't speak English. I love their dishes
                     so much that I learnt how to order in Chinese!</div>
@@ -226,7 +226,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Michelle Suriawan</div>
-                <div class="mentor-desc">3+ Food Science</div>
+                <div class="mentor-prog">3+ Food Science</div>
                 <div class="mentor-desc">I like to play badminton and volleyball!</div>
             </div>
 
@@ -238,7 +238,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Nadya Tan</div>
-                <div class="mentor-desc">3+ Psychology</div>
+                <div class="mentor-prog">3+ Psychology</div>
                 <div class="mentor-desc">I own 14 pairs of jeans!</div>
             </div>
         </div>
@@ -249,7 +249,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Natasya Serena</div>
-                <div class="mentor-desc">2+ Nutritional Sciences</div>
+                <div class="mentor-prog">2+ Nutritional Sciences</div>
                 <div class="mentor-desc">I can speak in TikTok references!</div>
             </div>
         </div>
@@ -260,7 +260,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Nathan Gunawan</div>
-                <div class="mentor-desc">4+ Entrepreneurship</div>
+                <div class="mentor-prog">4+ Entrepreneurship</div>
                 <div class="mentor-desc">I've dislocated my left knee 2x!</div>
             </div>
         </div>
@@ -271,7 +271,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Raphael Deonova</div>
-                <div class="mentor-desc">2+ Computer Science</div>
+                <div class="mentor-prog">2+ Computer Science</div>
                 <div class="mentor-desc">I used to be a top Nana player in Vancouver!</div>
             </div>
         </div>
@@ -282,7 +282,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Shadrina Wicaksono</div>
-                <div class="mentor-desc">UBC Sauder Alumni 2020</div>
+                <div class="mentor-prog">UBC Sauder Alumni 2020</div>
                 <div class="mentor-desc">I have written 15+ songs!</div>
             </div>
         </div>
@@ -293,7 +293,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Stephanie Hasjim</div>
-                <div class="mentor-desc">3+ Chemical Engineering</div>
+                <div class="mentor-prog">3+ Chemical Engineering</div>
                 <div class="mentor-desc">I can predict plot twists in movies
                     before it happens!</div>
             </div>
@@ -305,7 +305,7 @@
             </div>
             <div class="mentor-desc-box">
                 <div class="mentor-name">Tania Suradja</div>
-                <div class="mentor-desc">4+ Dietetics</div>
+                <div class="mentor-prog">4+ Dietetics</div>
                 <div class="mentor-desc">I finished knitting a scarf this
                     summer!</div>
             </div>
@@ -315,9 +315,9 @@
             <div class="mentor-pic-box">
                 <img class="mentor-pic" src="media/mentorpic/joss.jpg">
             </div>
-            <div class="mentor-name-box">
-                <div class="mentor-desc">Theodorus Jossoey</div>
-                <div class="mentor-desc">4+ Cognitive System</div>
+            <div class="mentor-desc-box">
+                <div class="mentor-name">Theodorus Jossoey</div>
+                <div class="mentor-prog">4+ Cognitive System</div>
                 <div class="mentor-desc">I used to get a bald haircut until
                     7th grade!</div>
             </div>
