--- a/guepage.html
+++ b/guepage.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 <div class="mentors">
-    <div class="mentor-heading">Here are the group leaders:</div>
+    <div class="mentor-heading">Here are the mentors:</div>
     <div class="mentor-container-all">
         <div class="mentor-container-indiv mentor-color-1">
             <div class="mentor-pic-box">
