commit to live (forgot to add gue to navbar)

--- a/navbar.html
+++ b/navbar.html
@@ -39,8 +39,8 @@
           <li class="nav-item"><a href="community.html">PARTNERSHIP</a></li>
           <li class="nav-item"><a href="index.html#contact">JOIN US</a></li>
           <li class="nav-item">
-            <a style="color: red; font-weight: bolder" href="covidfaq.html"
-              >COVID-19 FAQ</a
+            <a style="color: red; font-weight: bolder" href="guepage.html"
+              >G.U.E</a
             >
           </li>
         </ul>
