--- a/community.html
+++ b/community.html
@@ -111,68 +111,70 @@
                 <div class="communityTitle" style="font-size: 38px">Interested in sponsoring us?</div>
                 <p style="font-size: 22px">Contact us at <a href="mailto:sponsorship.gisau@gmail.com">sponsorship.gisau@gmail.com</a></p>
             </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Auntie Anne's Indonesia</div>
+                <div class="communityPic">
+                    <img src="media/auntie-anne's.png" alt="baodown" class="sponsorImg">
+                </div>
+
+                <p> Always fresh out of the oven, our pretzels raise the standard of snacking. Whatever mood you're in, there's a pretzel for you.
+                    From the Original Pretzel to the deliciousness of Almond stick with chocolate and cream cheese filling, these all-time favorites hit the spot every time.
+                </p>
+
+                <p>Use your GISAU Card here to <b>get 1 free pretzel every purchase of 2 pretzels!</b></p>
+
+                <p><a href="https://www.instagram.com/auntieannesid/?hl=en" target="_blank">Visit Auntie Anne's Indonesia here</a></p>
+            </div>
+
             <div class="sponsorBox">
                 <div class="communityTitle">NUSA COFFEE</div>
                 <div class="communityPic">
-                    <img src="media/nusa-coffee.png" alt="nusa" class="sponsorImg">
+                    <img src="media/nusa%20logo.png" alt="nusa" class="sponsorImg">
                 </div>
-                <p>Enjoy a <b>10% discount</b> at Nusa Coffee Company, a Canadian importer of premium coffee beans from their
-                    birthplace – Indonesia. Nusa stands out for their coffee offerings, baked goods, sandwiches and healthy
-                    desserts. As part of their “Savoury Weekends”, Nusa serves delicious authentic Indonesian food which will
-                    definitely melt in your mouth!</p>
-
-                <!--
-                <p>Visit Nusa Coffee at    :
-                    <a href="https://www.google.ca/maps/dir//2766+W+4th+Ave,+Vancouver,+BC+V6K+1R1/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x54867252ad805301:0x5bf0ed9540acdda1?sa=X&ved=2ahUKEwiioZXrg8bdAhUT3lQKHZPgDuYQwwUwAHoECAUQAw">2766 West 4th Avenue </a>
+                <p>We are a Canadian importer of premium coffee beans from Indonesia. Offering up distinct tastes from the Indonesian archipelago's biologically diverse islands,
+                    Nusa gives coffee lovers a taste of regional flavour palates. <br>
                 </p>
-
-
-                <p>Hours:</p>
-                <p>(Weekdays) 7a.m. – 6p.m.
-                (Sat & Sun) : 8a.m. – 6p.m.</p>
-                -->
+                <p><b>Use your GISAU Card here to get 10% off!</b></p>
                 <p><a href="http://www.nusacoffeecompany.com/" target="_blank">Visit Nusa Coffee here</a></p>
             </div>
 
             <div class="sponsorBox">
-                <div class="communityTitle">THE HOLY CRAB</div>
+                <div class="communityTitle">Wartruk</div>
                 <div class="communityPic">
-                    <img src="media/holycrab.jpeg" alt="holy-crab" class="sponsorImg">
+                    <img src="media/Wartruk.jpg" alt="holy-crab" class="sponsorImg">
                 </div>
-                <p>The Holy Crab proudly serves all GISAU members with a <b>15% discount</b> for your purchases. The Louisiana-inspired
-                    seafood restaurant offers the best selections of tasty premium local & imported seafood. Boasting its
-                    spicy Cajun sauce, mouth-watering crustaceans, sweet corn and cold drinks!</p>
+                <p>Wartruk is a food and beverage chain that serves elevated Indonesian ‘warteg’ food. Unlike other ‘warteg’, Wartruk puts a heavy emphasis on hygiene and efficiency in its process to
+                    become a staple food for Indonesians.
+                </p>
 
-                <p>ROLL UP YOUR SLEEVES, PUT ON YOUR BIB & LET'S GET CRACKING!</p>
+                <p><b>Use your GISAU Card here to get free Anggur Merah every purchase of IDR 35k or more!</b></p>
 
-                <p><a href="http://www.theholycrab.ca/" target="_blank">Visit The Holy Crab here</a></p>
+                <p><a href="https://www.instagram.com/wartruk/?hl=en" target="_blank">Visit Wartruk Instagram here</a></p>
             </div>
 
             <div class="sponsorBox">
-                <div class="communityTitle">KUMME CAFÉ</div>
+                <div class="communityTitle">Midam Broadway</div>
                 <div class="communityPic">
-                    <img src="media/kumme.png" alt="kumme-cafe" class="sponsorImg">
+                    <img src="media/midam.jpeg" alt="kumme-cafe" class="sponsorImg">
                 </div>
-                <p>Visit Kumme Café and have a taste of their various menu. Get <b>15% off</b> for their light side dishes, to
-                    their house special cakes, and their healthy (yes, healthy) fresh fruit bubble tea, ice cream and
-                    other refreshments!</p>
-
-                <p><a href="https://www.instagram.com/kummecafe.media/" target="_blank">Visit KUMME CAFÉ Instagram here</a></p>
+                <p>Midam is a Korean fusion restaurant which started over 10 years ago. We had a location in Richmond which we sold and came to 3211 W Broadway. We wanted to be closer to the UBC community
+                    and bring the utmost Korean fusion food in town. <br>Please support Midam Broadway and we will always deliver the best service and food you all deserve.
+                </p>
+                <p><b>Use your GISAU Card here to get 10% off on food!</b></p>
+                <p><a href="https://www.midam.ca/" target="_blank">Visit Midam Broadway here</a></p>
             </div>
 
             <div class="sponsorBox">
-                <div class="communityTitle">POKAY VANCOUVER</div>
+                <div class="communityTitle">ALGORITMA</div>
                 <div class="communityPic">
-                    <img src="media/pokay.png" alt="pokay" class="sponsorImg">
+                    <img src="media/algoritma.png" alt="pokay" class="sponsorImg">
                 </div>
-                <p>“GO GREEN or go home!”</p>
-
-                <p> Use your GISAU membership to get a <b>15% discount</b> every Monday-Thursday and a 10%
-                    discount on Friday-Sunday on your Pokay poké! Their house bowls are to die for but for YOU
-                    Poké experts, Pokay has a “build your own bowl” option where you get to choose from a
-                    selection of bases, proteins, toppings and to finish off, flavor it with your own choice of sauce!</p>
-
-                <p><a href="https://www.instagram.com/pokayvan/" target="_blank">Visit Pokay Instagram here</a></p>
+                <p> Algoritma Data Science School is a data science bootcamp with a vision to democratize data science skills in Indonesia. Join Algoritma's Bootcamp to hone the skills needed for your future!
+                    Ask Algoritmas' education consultants for more info through <b>0813-8550-5579</b> to discuss your needs and use your special codes.
+                </p>
+                <p>GISAU members receive <b>IDR 10.000.000,- scholarship for Data Science courses.</b> Contact us to know your discount codes!</p>
+                <p><a href="https://algorit.ma/" target="_blank">Visit Algoritma here</a></p>
             </div>
 
             <div class="sponsorBox">
@@ -182,26 +184,14 @@
                 </div>
                 <p>Boba for days? Yes please!</p>
 
-                <p>Use your GISAU card in Kung Fu Tea to get a <b>15% off!</b> Get a twist on their favorite drinks and
-                    enjoy a selection of milk tea, milk cap, slush, yogurts and seasonal menus! They also have a
-                    variety of toppings, including their newest one: crystal bubbles!</p>
+                <p>“True Skills Make Great Bubble Tea”
 
-                <p><a href="https://www.facebook.com/kungfutea.bc/" target="_blank">Visit Kung Fu Tea Vancouver Facebook here</a></p>
-            </div>
+                    Because we care about every cup of bubble tea that is handed to our valued customer, we double check every single step of making our drinks.
 
-            <div class="sponsorBox">
-                <div class="communityTitle">BAODOWN UBC</div>
-                <div class="communityPic">
-                    <img src="media/baodown.jpeg" alt="baodown" class="sponsorImg">
-                </div>
-
-                <p> GISAU members can now get a <b>10% off</b> in Bao Down (UBC location only)! Get your hands on
-                    some mouth-watering flavours and spices of the Orient with fresh vegetables and proteins of
-                    the Pacific Northwest. They’ve got signature steamed baos, Asian rice and noodles menu, even
-                    sharing plates and plant-based options! Plus, they also have a HAPPY HOUR EVERYDAY from
-                        3.00 - 6.30pm!</p>
-
-                <p><a href="https://baodown-ubc.business.site/" target="_blank">Visit BaoDown UBC here</a></p>
+                    From 38 Milk King to Signature Lite Fruit Tea, we are happy to see happy customers with quality and yummy Kung Fu Tea.
+                </p>
+                <p>Use your GISAU Card here to get <b>15% off</b> their drinks!</p>
+                <p><a href="https://www.kungfutea.com/" target="_blank">Visit Kung Fu Tea Vancouver here</a></p>
             </div>
 
             <div class="sponsorBox">
@@ -210,23 +200,78 @@
                     <img src="media/pitapit.jpg" alt="pitapit" class="sponsorImg">
                 </div>
 
-                <p> We've got you boba, coffee, and different kinds of food, this time, we got you Pitas!
-                    Get <b>15% off</b> on pitas in PitaPit UBC, you can get creative and customize your own with different kinds of protein!
-                    And don't forget to start your healthy eating with PitaPit as they offer vegan choices too! </p>
-
-                <p><a href="https://www.instagram.com/pitapit_ubc/" target="_blank">Visit PitaPit UBC Instagram here</a></p>
+                <p> FRESH THINKING, HEALTHY EATING! Pita Pit is fun, fresh and healthy! You can have you pita rolled, bowled, or flat. Your choice of toppings! They are custom-designed to wrap around our delicious,
+                    lean grilled meats, fresh toppings, cheeses, and sauces, so it can be eaten and enjoyed anywhere. <br> Yes, anywhere. The office desk, walking down the street, driving the car  —although we don’t recommend this! —
+                    and even on the dance floor! <b>Order in store or online now!</b>
+                </p>
+                <p>Use your GISAU Card here to get <b>15% off</b> some delicious pitas!</p>
+                <p><a href="https://www.instagram.com/pitapit_ubc/" target="_blank">Visit PitaPit UBC here</a></p>
             </div>
 
             <div class="sponsorBox">
-                <div class="communityTitle">Waverly Barber</div>
+                <div class="communityTitle">Snacc.Vancouver</div>
                 <div class="communityPic">
-                    <img src="media/waverly.jpg" alt="waverly-barber" class="sponsorImg">
+                    <img src="media/snacc.png" alt="waverly-barber" class="sponsorImg">
                 </div>
 
-                <p> When you study abroad and got no time for self care, here's a solution for ya! Treat yourself to a
-                    haircut at Waverly Barber and get <b>20% off</b> with your GISAU card!
-                    They've got talented hairdressers with professional services to make you look extra fresh! </p>
-                <p><a href="https://waverly-barber-shop.business.site/">Visit Waverly Barber here</a></p>
+                <p>
+                    A Snacc shop, where you can order crispy pork belly Snacc bowls perfect for any occasion. These snacc bowls offer Vancouver exciting new flavours, in a carriable size.
+                    Try out the crispy pork belly with our signature creamy salted egg sauce. Or opt in for a taste closer to home with our refreshing sambal matah.
+                </p>
+                <p>Use your GISAU Card here to get <b>15% off</b> their bowls and get snaccing</p>
+                <p><a href="https://www.instagram.com/snacc.vancouver/">Visit Snacc Vancouver here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Kokoro Mazesoba</div>
+                <div class="communityPic">
+                    <img src="media/kokoro.jpg" alt="waverly-barber" class="sponsorImg">
+                </div>
+                <p>
+                    When your tummy is grumbling and your throat feels thirsty, Kokoro UBC is the right choice for you! With various scrumptious Mazesoba, Ramen and Rice Dons to choose from,
+                    you can make the most out of your GISAU Card by enjoying a <b>free non-alcoholic drink</b> of your choice for every purchase of $20.
+                </p>
+                <p><a href="http://menyakokoro.com/">Visit Kokoro Mazesoba here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Storagehotel</div>
+                <div class="communityPic">
+                    <img src="media/storagehotel.jpg" alt="storagehotel" class="sponsorImg">
+                </div>
+                <p>
+                    Storagehotel is UBC's #1 student storage service. We save you time and energy by going directly to you to pick up your items, storing them in our secure facility,
+                    and delivering them back to you whenever you need them. Easily pack with our free boxes and tape!
+                </p>
+                <p>Use “UBCGISAU” for <b>10% off!</b> your first month of storage!</p>
+                <p><a href="https://www.storagehotel.ca/">Visit Storagehotel here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Salty's Lobster Shack</div>
+                <div class="communityPic">
+                    <img src="media/salty-lobster.jpg" alt="salty-lobster-shack" class="sponsorImg">
+                </div>
+                <p>
+                    We started Saltys Lobster Shack after a friend whose a lobster fisherman from Halifax came to visit. After spending a weekend with him he convinced us that Saltys Lobster Shack was worth
+                    taking a shot on and boy was he right!<br>
+                    We source all our products from local businesses such as Swiss Bakery and Sunrise Grocery. For Lobster we actually get it flown in from Halifax and everything is 100% Canadian. Community is what it’s all about!
+                </p>
+                <p>Use your GISAU Card here to get <b>20% off!</b></p>
+                <p><a href="https://www.instagram.com/saltyslobster/?hl=en">Visit Salty's Lobster Shack here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Baodown UBC</div>
+                <div class="communityPic">
+                    <img src="media/baodown.jpeg" alt="baodown" class="sponsorImg">
+                </div>
+                <p>
+                    GISAU members can now get a 10% off in Bao Down (UBC location only)! Get your hands on some mouth-watering flavours and spices of the Orient with fresh vegetables and proteins of the Pacific Northwest.
+                    They’ve got signature steamed baos, Asian rice and noodles menu, even sharing plates and plant-based options! Plus, they also have a HAPPY HOUR EVERYDAY from 3.00 - 6.30pm!
+                </p>
+                <p>Use your GISAU Card here to get <b>10% off!</b> for some tasty baos!</p>
+                <p><a href="https://baodown-ubc.business.site/">Visit BAODOWN UBC here</a></p>
             </div>
         </div>
     </div>
