--- a/navbar.html
+++ b/navbar.html
@@ -31,6 +31,7 @@
               TEAM
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="team_2020.html">2020-2021</a>
               <a class="dropdown-item" href="team.html">2019-2020</a>
               <a class="dropdown-item" href="team_2018.html">2018-2019</a>
               <a class="dropdown-item" href="team_2017.html">2017-2018</a>
