two sponsors added

--- a/community.html
+++ b/community.html
@@ -243,7 +243,7 @@
                     Storagehotel is UBC's #1 student storage service. We save you time and energy by going directly to you to pick up your items, storing them in our secure facility,
                     and delivering them back to you whenever you need them. Easily pack with our free boxes and tape!
                 </p>
-                <p>Use “UBCGISAU” for <b>10% off!</b> your first month of storage!</p>
+                <p>Use “UBCGISAU” for <b>10% off</b> your first month of storage!</p>
                 <p><a href="https://www.storagehotel.ca/">Visit Storagehotel here</a></p>
             </div>
 
@@ -270,8 +270,35 @@
                     GISAU members can now get a 10% off in Bao Down (UBC location only)! Get your hands on some mouth-watering flavours and spices of the Orient with fresh vegetables and proteins of the Pacific Northwest.
                     They’ve got signature steamed baos, Asian rice and noodles menu, even sharing plates and plant-based options! Plus, they also have a HAPPY HOUR EVERYDAY from 3.00 - 6.30pm!
                 </p>
-                <p>Use your GISAU Card here to get <b>10% off!</b> for some tasty baos!</p>
+                <p>Use your GISAU Card here to get <b>10% off</b> for some tasty baos!</p>
                 <p><a href="https://baodown-ubc.business.site/">Visit BAODOWN UBC here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Santapan</div>
+                <div class="communityPic">
+                    <img src="media/Santapan%20logo.png" alt="santapan" class="sponsorImg">
+                </div>
+                <p>
+                    Cultural diversity defines Indonesia.
+                    The archipelagos of the country extend across Southeast Asia which has evoked a cuisine that is limitless in variety and rich in taste. Santapan Indonesian Grill has created a modern
+                    take on traditional Indonesian cuisine to bring the taste of Indonesia in a unique way for all to enjoy.
+                </p>
+                <p>Use your GISAU Card here to get <b>15% off</b> foods!</p>
+                <p><a href="https://www.santapan.ca/">Visit Santapan Indonesian Grill here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">T-Fresh</div>
+                <div class="communityPic">
+                    <img src="media/tfresh.png" alt="baodown" class="sponsorImg">
+                </div>
+                <p>
+                    It has been seven years since our first store opened in the city of Taichung, Taiwan; now we are finally here in Canada, in the city of Richmond, BC. The next move is yours,
+                    come and enjoy the best that we can offer you and find out what the dessert sensation is all about. We are confident that you will fall in love with them.
+                </p>
+                <p>Use your GISAU Card here to enjoy <b>10% off!</b></p>
+                <p><a href="http://www.t-fresh.ca/">Visit T-Fresh here</a></p>
             </div>
         </div>
     </div>
