--- a/guepage.html
+++ b/guepage.html
@@ -9,23 +9,25 @@
     <link rel="stylesheet" href="css/flickity.css">
     <script src="css/flickity.pkgd.js"></script>
     <!--BOOTSTRAP-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="css/googleanalytics.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/navigation-style.css">
     <link rel="stylesheet" href="css/gue.css">
     <script src="css/navbar.js"></script>
 </head>
 <body>
+<div id="nav-placeholder"></div> <!-- navbar -->
 <div class="banner">
     <img class="banner-img" src="media/gue-banner.jpg" alt="banner">
 </div>
 <h1>G.U.E</h1>
 <h2>Mentorship Program</h2>
+
 <div class="desc-box">
     <div class="description">
         You have officially made the first right decision to start off your
@@ -43,6 +45,106 @@
         will be completely virtual. Wherever you are in the world, you can
         still experience the complete excitement of G.U.E.
     </div>
+</div>
+
+<div class="scoreboard-container">
+    <table class="table table-bordered table-striped scoreboard">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Group</th>
+            <th scope="col">Skribbl</th>
+            <th scope="col">Codenames</th>
+            <th scope="col">Trivia Murder Party</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">4</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">5</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">6</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">7</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">8</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">9</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">10</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">11</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        <tr>
+            <th scope="row">12</th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+            <th scope="row"></th>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <div class="mentors">
     <div class="mentor-heading">Here are the mentors:</div>
