working podium and table

--- a/guepage.html
+++ b/guepage.html
@@ -47,101 +47,152 @@
     </div>
 </div>
 
+<div class="podium-container">
+    <div id="podium-box" class="row" style="height: 300px">
+    <div class="col-md-4 step-container m-0 p-0 podium-stand">
+        <div>
+            Internet
+        </div>
+        <div id="second-step" class="bg-blue step centerBoth podium-number">
+        2
+        </div>
+    </div>
+    <div class="col-md-4 step-container m-0 p-0 podium-stand">
+        <div>
+            8 Rising
+        </div>
+        <div id="first-step" class="bg-blue step centerBoth podium-number">
+        1
+        </div>
+    </div>
+    <div class="col-md-4 step-container m-0 p-0 podium-stand">
+        <div>
+            Newbie Nerds
+        </div>
+        <div id="third-step" class="bg-blue step centerBoth podium-number">
+        3
+        </div>
+    </div>
+    </div>
+</div>
+
 <div class="scoreboard-container">
     <table class="table table-bordered table-striped scoreboard">
         <thead>
         <tr>
-            <th scope="col">#</th>
-            <th scope="col">Group</th>
-            <th scope="col">Skribbl</th>
-            <th scope="col">Codenames</th>
-            <th scope="col">Trivia Murder Party</th>
+            <th scope="col" style="width: 5%;">#</th>
+            <th scope="col" style="width: 30%;">Group</th>
+            <th scope="col" style="width: 65%;">Score</th>
         </tr>
         </thead>
         <tbody>
         <tr>
             <th scope="row">1</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">8 Rising</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">2</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Internet</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">3</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Newbie Nerds</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 89%;" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">4</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Teampe</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 88%;" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">5</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Cantik Sopan Terpelajar</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 86%;" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">6</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Prasmul's Donburi</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 83%;" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">7</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">KOYO</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">8</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Martabak MANES</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 78%;" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">9</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Blue Vented</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 74%;" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">10</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Raja Ampat</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 72%;" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">11</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">KOPI</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         <tr>
             <th scope="row">12</th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
-            <th scope="row"></th>
+            <th scope="row">Wapricagana</th>
+            <th scope="row">
+                <div class="progress" style="margin: 0;">
+                    <div class="progress-bar" role="progressbar" style="width: 62%;" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </th>
         </tr>
         </tbody>
     </table>
