--- a/guepage.html
+++ b/guepage.html
@@ -50,7 +50,7 @@
 <div class="podium-container">
     <div id="podium-box" class="row" style="height: 300px">
     <div class="col-md-4 step-container m-0 p-0 podium-stand">
-        <div>
+        <div class="team_name">
             Internet
         </div>
         <div id="second-step" class="bg-blue step centerBoth podium-number">
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="col-md-4 step-container m-0 p-0 podium-stand">
-        <div>
+        <div class="team_name">
             8 Rising
         </div>
         <div id="first-step" class="bg-blue step centerBoth podium-number">
@@ -66,7 +66,7 @@
         </div>
     </div>
     <div class="col-md-4 step-container m-0 p-0 podium-stand">
-        <div>
+        <div class="team_name">
             Newbie Nerds
         </div>
         <div id="third-step" class="bg-blue step centerBoth podium-number">
