updated kungfutea img

--- a/community.html
+++ b/community.html
@@ -180,7 +180,7 @@
             <div class="sponsorBox">
                 <div class="communityTitle">KUNG FU TEA VANCOUVER</div>
                 <div class="communityPic">
-                    <img src="media/kungfutea.jpeg" alt="kungfutea" class="sponsorImg">
+                    <img src="media/kungfu-new.jpeg" alt="kungfutea" class="sponsorImg">
                 </div>
                 <p>Boba for days? Yes please!</p>
 
