indomie page draft

--- a/navbar.html
+++ b/navbar.html
@@ -41,9 +41,10 @@
           <li class="nav-item"><a href="index.html#contact">JOIN US</a></li>
           <li class="nav-item">
             <a style="color: red; font-weight: bolder" href="guepage.html"
-              >G.U.E</a
-            >
+              >G.U.E
+            </a>
           </li>
+          <li class="nav-item"><a href="indomie.html">Indomie</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right" id="gisaunavsocial">
