try mobile fix: change font Roboto

--- a/indomie.html
+++ b/indomie.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/joinus.css">
     <link rel="stylesheet" href="css/indomie.css">
     <script src="css/navbar.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <body>
