try mobile fix: reverting good changes

--- a/indomie.html
+++ b/indomie.html
@@ -28,7 +28,7 @@
 
 <body>
     <div id="nav-placeholder"></div> <!-- navbar -->
-    <!-- <img src="media/gisau_indomie.jpg"> -->
+    <img src="media/gisau_indomie.jpg">
     <div class="content">
         <div class="opening">
             <h1>Join the Indomie Cooking Showdown competition and win a pair of Airpods!!!</h1>
