indomie partners done

--- a/indomie.html
+++ b/indomie.html
@@ -77,6 +77,28 @@
             </a> <br>
             For those participating, thank you so much and good luck!!!
         </div>
+        <div class="sponsor">
+            <div>
+                Thank you to our partners that made this event possible!!!
+            </div>
+            <div class="sponsorBox">
+                <img class="sponsorIcon" src="media/Agora Cafe.PNG"></img>
+                <img class="sponsorIcon" src="media/ASEAC.jpg"></img>
+                <img class="sponsorIcon" src="media/BizChina Logo.png"></img>
+                <img class="sponsorIcon" src="media/Club Hk.png"></img>
+                <img class="sponsorIcon" src="media/Engi-you.png"></img>
+                <img class="sponsorIcon" src="media/kababayan.png"></img>
+                <img class="sponsorIcon" src="media/LFSUS.png"></img>
+                <img class="sponsorIcon" src="media/Permika.png"></img>
+                <img class="sponsorIcon" src="media/Seri Malaysia.jpg"></img>
+                <img class="sponsorIcon" src="media/Thai Aiyara.png"></img>
+                <img class="sponsorIcon" src="media/UBC Cooking Club Logo.png"></img>
+                <img class="sponsorIcon" src="media/UBC Food Science.png"></img>
+                <img class="sponsorIcon" style="background-color: black" src="media/UBCMX.png"></img>
+                <img class="sponsorIcon" src="media/ubcvss.png"></img>
+                <img class="sponsorIcon" src="media/ux_hub_logo(purple).png"></img>
+            </div>
+        </div>
     </div>
 </body>
 <footer id="footer"></footer>
