add susuru year long sponsor

--- a/community.html
+++ b/community.html
@@ -300,6 +300,20 @@
                 <p>Use your GISAU Card here to enjoy <b>10% off!</b></p>
                 <p><a href="http://www.t-fresh.ca/">Visit T-Fresh here</a></p>
             </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Susuru</div>
+                <div class="communityPic">
+                    <img src="media/susuru logo png-0.png" alt="baodown" class="sponsorImg">
+                </div>
+                <p>
+                    We learned from the masters for months, honing the skills to develop a consistent great taste and perfect blend in a magical hot bowl 
+                    of ramen. With high quality imported ingredients, slurping ramen is a custom extending all the way back to the Edo period, an integral
+                    part of Japan’s food culture. The name SUSURU is the slurping sound you make when you slurp your ramen, so let's slurp!
+                </p>
+                <p>Use your GISAU Card here to enjoy <b>10% off!</b></p>
+                <p><a href="https://www.instagram.com/susuruslurping/?hl=en">Visit Susuru Instagram here</a></p>
+            </div>
         </div>
     </div>
 <footer id="footer"></footer>
