added ams paint club to indomie partners

--- a/indomie.html
+++ b/indomie.html
@@ -97,6 +97,7 @@
                 <img class="sponsorIcon" style="background-color: black" src="media/UBCMX.png"></img>
                 <img class="sponsorIcon" src="media/ubcvss.png"></img>
                 <img class="sponsorIcon" src="media/ux_hub_logo(purple).png"></img>
+                <img class="sponsorIcon" src="media/ams paint club logo .jpeg"></img>
             </div>
         </div>
     </div>
