add new indomie partner

--- a/indomie.html
+++ b/indomie.html
@@ -98,6 +98,7 @@
                 <img class="sponsorIcon" src="media/ubcvss.png"></img>
                 <img class="sponsorIcon" src="media/ux_hub_logo(purple).png"></img>
                 <img class="sponsorIcon" src="media/ams paint club logo .jpeg"></img>
+                <img class="sponsorIcon" src="media/IMG_2380.png"></img>
             </div>
         </div>
     </div>
