--- a/navbar.html
+++ b/navbar.html
@@ -1,96 +1,77 @@
-<div class="navBar">
-	<nav class="navbar navbar-inverse navbar-static-top">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button
-					type="button"
-					class="navbar-toggle"
-					data-toggle="collapse"
-					data-target="#myNavbar"
-				>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" id="gisauBrand" href="index.html"
-					>GISAU</a
-				>
-			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav" id="gisauTabs">
-					<li class="nav-item"><a href="index.html">HOME</a></li>
-					<li class="nav-item">
-						<a href="index.html#about">ABOUT</a>
-					</li>
-					<li class="nav-item">
-						<a href="index.html#events">EVENTS</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdown"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							TEAM
-						</a>
-						<div
-							class="dropdown-menu"
-							aria-labelledby="navbarDropdown"
-						>
-							<a class="dropdown-item" href="team_2020.html"
-								>2020-2021</a
-							>
-							<a class="dropdown-item" href="team.html"
-								>2019-2020</a
-							>
-							<a class="dropdown-item" href="team_2018.html"
-								>2018-2019</a
-							>
-							<a class="dropdown-item" href="team_2017.html"
-								>2017-2018</a
-							>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a href="community.html">PARTNERSHIP</a>
-					</li>
-					<li class="nav-item">
-						<a href="index.html#contact">JOIN US</a>
-					</li>
-					<!-- <li class="nav-item">
-            <a style="color: red; font-weight: bolder" href="guepage.html"
-              >G.U.E
-            </a>
-          </li>
-          <li class="nav-item"><a href="indomie.html">Indomie</a></li> -->
-				</ul>
-
-				<ul class="nav navbar-nav navbar-right" id="gisaunavsocial">
-					<li>
-						<a href="index.html#contact"
-							><img src="media/email.png" alt="email"
-						/></a>
-					</li>
-					<li>
-						<a href="https://www.facebook.com/gisaubc"
-							><img src="media/facebook.png" alt="facebook"
-						/></a>
-					</li>
-					<li>
-						<a href="https://www.instagram.com/gisaubc/"
-							><img src="media/instagram.png" alt="instagram"
-						/></a>
-					</li>
-					<li>
-						<a href="https://www.youtube.com/user/GISAUBC"
-							><img src="media/youtube.png" alt="youtube"
-						/></a>
-					</li>
-				</ul>
-			</div>
+<nav
+	class="navbar navbar-custom navbar-expand-sm fixed-top navbar-dark bg-dark"
+>
+	<div class="container-fluid">
+		<a class="navbar-brand" id="gisauBrand" href="index.html">GISAU</a>
+		<button
+			class="navbar-toggler"
+			type="button"
+			data-bs-toggle="collapse"
+			data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent"
+			aria-expanded="false"
+			aria-label="Toggle navigation"
+		>
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul id="gisauTabs" class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a
+						class="nav-link active"
+						aria-current="page"
+						href="index.html"
+					>
+						HOME
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="index.html#about">ABOUT</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="index.html#events">EVENTS</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a
+						class="nav-link dropdown-toggle"
+						href="#"
+						id="navbarDropdown"
+						role="button"
+						data-bs-toggle="dropdown"
+						aria-expanded="false"
+					>
+						TEAMS
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<li>
+							<a class="dropdown-item" href="team_2020.html">
+								2020-2021
+							</a>
+						</li>
+						<li><hr class="dropdown-divider" /></li>
+						<li>
+							<a class="dropdown-item" href="team_2019.html">
+								2019-2020
+							</a>
+						</li>
+						<li><hr class="dropdown-divider" /></li>
+						<li>
+							<a class="dropdown-item" href="team_2018.html">
+								2018-2019
+							</a>
+						</li>
+						<li><hr class="dropdown-divider" /></li>
+						<li>
+							<a class="dropdown-item" href="team_2017.html">
+								2017-2018
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="community.html">PARTNERSHIP</a>
+				</li>
+			</ul>
 		</div>
-	</nav>
-</div>
+	</div>
+</nav>
