--- a/team_2019.html
+++ b/team_2019.html
@@ -6,25 +6,36 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<title>Gado-Gado Indonesian Student Association UBC - Team</title>
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="shortcut icon" href="media/favicon.png" />
+		<title>Gado-Gado Indonesian Student Association UBC</title>
 		<!--BOOTSTRAP-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+			integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+			crossorigin="anonymous"
 		/>
+		<!--BOOTSTRAP-->
+		<link rel="shortcut icon" href="media/favicon.png" />
+		<!--CAROUSEL-->
+		<link rel="stylesheet" href="css/flickity.css" />
+		<script src="css/flickity.pkgd.js"></script>
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<!-- Latest compiled JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="css/googleanalytics.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/navigation-style.css" />
+		<link rel="stylesheet" href="css/body.css" />
+		<link rel="stylesheet" href="css/warungcs.css" />
 		<link rel="stylesheet" href="css/team.css" />
 		<link rel="stylesheet" href="css/joinus.css" />
-		<link rel="stylesheet" href="css/body.css" />
-		<script src="css/navbar.js"></script>
+		<!-- JS -->
+		<script type="text/javascript" src="css/navbar.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+			crossorigin="anonymous"
+		></script>
 	</head>
 
 	<body>
