fix responsive issues - layout

--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-8 main_image">
-                        <img src="media/blog/put-image.png" class="img-responsive center-block">
+                        <img src="media/blog/put-image.png" class="img-fluid">
                         <p>Caption for image above</p>
                     </div>
                     <div class="col-md-2"></div>
@@ -115,21 +115,21 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-lg-4">
                             <div class="card">
-                                <img src="media/blog/something.jpg">
+                                <img src="media/blog/something.jpg" class="img-fluid">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus sed lectus et pharetra. Duis ultricies metus vitae neque maximus auctor. Mauris laoreet nunc ac augue convallis, non sagittis sapien tempor. Sed condimentum tortor eget elit eleifend viverra. Etiam sed mi et metus posuere dictum.</p>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-lg-4">
                             <div class="card">
-                                <img src="media/blog/something.jpg">
+                                <img src="media/blog/something.jpg" class="img-fluid">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus sed lectus et pharetra. Duis ultricies metus vitae neque maximus auctor. Mauris laoreet nunc ac augue convallis, non sagittis sapien tempor. Sed condimentum tortor eget elit eleifend viverra. Etiam sed mi et metus posuere dictum.</p>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-lg-4">
                             <div class="card">
-                                <img src="media/blog/something.jpg">
+                                <img src="media/blog/something.jpg" class="img-fluid"> 
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus sed lectus et pharetra. Duis ultricies metus vitae neque maximus auctor. Mauris laoreet nunc ac augue convallis, non sagittis sapien tempor. Sed condimentum tortor eget elit eleifend viverra. Etiam sed mi et metus posuere dictum.</p>
                             </div>
                         </div>
@@ -137,19 +137,19 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card">
-                                <img src="media/blog/something.jpg">
+                                <img src="media/blog/something.jpg" class="img-fluid">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus sed lectus et pharetra. Duis ultricies metus vitae neque maximus auctor. Mauris laoreet nunc ac augue convallis, non sagittis sapien tempor. Sed condimentum tortor eget elit eleifend viverra. Etiam sed mi et metus posuere dictum.</p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <img src="media/blog/something.jpg">
+                                <img src="media/blog/something.jpg" class="img-fluid">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus sed lectus et pharetra. Duis ultricies metus vitae neque maximus auctor. Mauris laoreet nunc ac augue convallis, non sagittis sapien tempor. Sed condimentum tortor eget elit eleifend viverra. Etiam sed mi et metus posuere dictum.</p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <img src="media/blog/something.jpg">
+                                <img src="media/blog/something.jpg" class="img-fluid">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempus sed lectus et pharetra. Duis ultricies metus vitae neque maximus auctor. Mauris laoreet nunc ac augue convallis, non sagittis sapien tempor. Sed condimentum tortor eget elit eleifend viverra. Etiam sed mi et metus posuere dictum.</p>
                             </div>
                         </div>
